# keyboard_and_mouse_input_recorder_and_player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  command_parser.cpp  command_parser.h  command_wrapper.cpp  command_wrapper.h  documentation.txt  enumerations.h  error_reporting.h  ext_scrolled_window.h  extended_popup.cpp  extended_popup.h  hid_manager.h  image_panel.cpp  input_command.cpp  input_command.h  inputblocker.cpp  inputblocker.h  key_map.h  km_recorder_player.cpp  main.h  roi.h  tinyusb_connector.cpp  tinyusb_connector.h  tinyusb_keyboard.cpp  tinyusb_mouse.cpp  tinyusb_mouse.h  uinput_keyboard.h  uinput_mouse.cpp  wrapper_panel.h
AppDir/: .DirIcon  AppRun  kmRecPlayerApp.desktop
AppDir/usr/lib/: libHalf-2_5.so.25  libIex-2_5.so.25  libIlmImf-2_5.so.25  libIlmThread-2_5.so.25  libImath-2_5.so.25  libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXfixes.so.3  libXi.so.6  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatspi.so.0  libblkid.so.1  libbsd.so.0  libcairo-gobject.so.2  libcairo.so.2  libdatrie.so.1  libdbus-1.so.3  libdeflate.so.0  libepoxy.so.0  libffi.so.7  libgdk-3.so.0  libgdk_pixbuf-2.0.so.0  libgmodule-2.0.so.0  libgraphite2.so.3  libjpeg.so.62  libmount.so.1  libpcre2-8.so.0  libpixman-1.so.0  libselinux.so.1  libtiff.so.5  libwayland-client.so.0  libwayland-cursor.so.0  libwayland-egl.so.1  libwebp.so.6
AppDir/usr/share/utility_files/: printable_characters.txt  tinyusb_printable_characters.txt
ImageDiff_Lib/: CMakeLists.txt  simple_image_difference.cpp
ImageDiff_Lib/include/ImageDiff_Lib/: simple_image_difference.h
hid_keyboard_and_mouse/: CMakeLists.txt  README.md  main.c
include/: command_parser.h  command_wrapper.h  cstr_split.h  debug_utils.h  dedicated_popups.h  enumerations.h  error_reporting.h  event_definitions.h  ext_scrolled_window.h  extended_popup.h  file_scrolled_window.h  hid_manager.h  image_panel.h  input_command.h  inputblocker.h  key_conversion.h  key_map.h  keyboard_emulator.h  km_recorder_player.h  main.h  mouse_emulator.h  progress_bar.h  roi.h  settings_manager.h  tinyusb_connector.h  tinyusb_key_map.h  tinyusb_keyboard.h  tinyusb_mouse.h  uinput_keyboard.h  uinput_mouse.h  utilities.h  wrapper_panel.h  wx_textctrl.h  wx_utils.h  wx_worker.h  wxstring_array.h
resources/: CMakeLists.txt  kmRecPlayerApp.desktop
src/: command_parser.cpp  command_wrapper.cpp  dedicated_popups.cpp  error_reporting.cpp  event_definitions.cpp  ext_scrolled_window.cpp  extended_popup.cpp  file_scrolled_window.cpp  hid_manager.cpp  image_panel.cpp  input_command.cpp  inputblocker.cpp  key_conversion.cpp  keyboard_emulator.cpp  km_recorder_player.cpp  main.cpp  mouse_emulator.cpp  progress_bar.cpp  settings_manager.cpp  tinyusb_connector.cpp  tinyusb_keyboard.cpp  tinyusb_mouse.cpp  uinput_keyboard.cpp  uinput_mouse.cpp  utilities.cpp  wx_textctrl.cpp  wx_worker.cpp
tinyusb_link_lib/: CMakeLists.txt  serial_port.cpp  udp_client.cpp
tinyusb_link_lib/include/TinyUSB_Link_Lib/: connector_interface.h  serial_port.h  udp_client.h
